<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.SuggestActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <TextView
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/send"
                android:textColor="@android:color/white" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@string/roboto_medium"
            android:text="@string/suggestion_introduction"
            android:textSize="@dimen/body" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/suggest_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/suggest_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suggestion_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/suggest_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/suggest_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/suggestion_content" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>