<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:visibility="gone"

    >

    <ImageView
        android:id="@+id/error_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="?actionBarSize"
        android:background="@drawable/ic_report_black_24dp"
        android:backgroundTint="@color/black_57" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@string/roboto_medium"
        android:gravity="center_horizontal"
        android:text="@string/error_general"
        android:textColor="@color/black_57"
        android:textSize="@dimen/sub_heading" />


    <TextView
        android:id="@+id/error_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@string/roboto_medium"
        android:gravity="center_horizontal"
        android:text="@string/error_tap_to_reload"
        android:textColor="@color/colorPrimaryMen"
        android:textSize="@dimen/sub_heading"

        />


</LinearLayout>


