<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/dialog_add_present_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_add_present_heading"
        android:textSize="@dimen/sub_heading" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/dialog_add_present_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_present_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/dialog_add_present_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_present_reason" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>