<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/me" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"

                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorPrimaryMen"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:clipChildren="false"
            android:orientation="vertical"
            android:paddingTop="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/roboto_medium"
                android:gravity="center_horizontal"
                android:text="Victor Cuena García"
                android:textColor="@color/black_87"
                android:textSize="@dimen/display_1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"

                >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/ic_person_black_24dp"
                    android:backgroundTint="@color/colorPrimaryMen" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@string/roboto_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/contact_who_am_I"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/sub_heading" />


                <View
                    style="@style/Divider.HorizontalDivider"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"

                    />

            </LinearLayout>


            <TextView
                android:id="@+id/who_am_I_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/contact_who_am_I_text"
                android:textColor="@color/black_87"
                android:textSize="@dimen/sub_heading"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@string/roboto_medium"
                android:gravity="center"
                android:paddingTop="16dp"
                android:text="@string/contact_who_am_I_text2"
                android:textSize="@dimen/body"


                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"

                >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/award_icon"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@string/roboto_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/contact_awards_title"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/sub_heading" />

                <View
                    style="@style/Divider.HorizontalDivider"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/roboto_regular"
                    android:paddingTop="16dp"
                    android:text="@string/contact_awards_talentum"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/sub_heading"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/roboto_regular"
                    android:paddingTop="4dp"
                    android:text="@string/contact_awards_talentum_text"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/body"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/roboto_regular"
                    android:paddingTop="16dp"
                    android:text="@string/contact_awards_recommendation_letter_vicechancellor"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/sub_heading"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/roboto_regular"
                    android:paddingTop="4dp"
                    android:text="@string/contact_awards_recommendation_letter_vicechancellor_text"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/body"

                    />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/roboto_medium"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/contact_links"
                android:textColor="@color/black_87"
                android:textSize="@dimen/sub_heading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/linkedin_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/circle_imageview"
                    android:elevation="2dp"
                    android:src="@drawable/linkedin_icon" />
            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
