<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.victorcuena.queleregalo.activities.DetailActivity"
    tools:showIn="@layout/activity_detail">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/roboto_regular"
                android:gravity="center_horizontal"
                android:minHeight="72dp"
                android:textColor="#212121"
                android:textSize="@dimen/display_1"

                />


            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@string/roboto_thin"
                android:gravity="center"
                android:textSize="@dimen/sub_heading" />

            <View
                style="@style/Divider.HorizontalDivider"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="3dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="24dp"
                    android:clipToPadding="false"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/detail_gender_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="8dp" />

                    <TextView
                        android:id="@+id/detail_gender_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@string/roboto_regular"
                        android:textSize="@dimen/caption" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/detail_age_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp" />

                    <TextView
                        android:id="@+id/detail_age_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@string/roboto_regular"
                        android:textSize="@dimen/caption" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <es.victorcuena.queleregalo.views.DoubleCircleView
                        android:id="@+id/detail_price_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="1dp"
                        android:fontFamily="@string/roboto_regular" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@string/roboto_regular"
                        android:text="@string/detail_price_text"
                        android:textSize="@dimen/caption" />

                </LinearLayout>


            </LinearLayout>


            <View
                style="@style/Divider.HorizontalDivider"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="3dp" />


        </LinearLayout>


        <FrameLayout
            android:id="@+id/amazon_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
